--- a/css/style.css
+++ b/css/style.css
@@ -443,7 +443,7 @@ template {
   font-family: "Roboto Condensed";
   font-style: normal;
   font-weight: 400;
-  src: url("../../fonts/RobotoCondensed-Regular.woff2") format("woff2"), url("../../fonts/RobotoCondensed-Regular.woff") format("woff");
+  src: url("../fonts/RobotoCondensed-Regular.woff2") format("woff2"), url("../fonts/RobotoCondensed-Regular.woff") format("woff");
   font-display: swap;
 }
 
@@ -451,7 +451,7 @@ template {
   font-family: "Roboto Condensed";
   font-style: normal;
   font-weight: 700;
-  src: url("../../fonts/RobotoCondensed-Bold.woff2") format("woff2"), url("../../fonts/RobotoCondensed-Bold.wofff") format("woff");
+  src: url("../fonts/RobotoCondensed-Bold.woff2") format("woff2"), url("../fonts/RobotoCondensed-Bold.wofff") format("woff");
   font-display: swap;
 }
 
@@ -459,7 +459,7 @@ template {
   font-family: "PT Mono";
   font-style: normal;
   font-weight: 400;
-  src: url("../../fonts/PTMono-Regular.woff2") format("woff2"), url("../../fonts/PTMono-Regular.woff") format("woff");
+  src: url("../fonts/PTMono-Regular.woff2") format("woff2"), url("../fonts/PTMono-Regular.woff") format("woff");
   font-display: swap;
 }
 
