--- a/css/style.css
+++ b/css/style.css
@@ -733,6 +733,10 @@ html {
 }
 
 .btn--order {
+  min-width: 160px;
+  -ms-flex-item-align: start;
+  -ms-grid-row-align: start;
+  align-self: start;
   padding: 11px 15px;
   background-color: inherit;
   border: 1px solid #f2f5f7;
@@ -1469,6 +1473,12 @@ html {
 
 .page-header__logo {
   margin-right: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-item-align: start;
+  -ms-grid-row-align: start;
+  align-self: start;
 }
 
 .page-header__logo img {
@@ -1480,8 +1490,6 @@ html {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
   -webkit-box-flex: 1;
   -ms-flex-positive: 1;
   flex-grow: 1;
@@ -1510,24 +1518,25 @@ html {
   margin-right: 30px;
 }
 
-.info-communication__item:last-of-type {
-  margin-right: 0;
-}
-
 .info-communication__link {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding: 15px 0;
-  width: 100%;
+  display: inline-block;
+  margin: 15px auto 15px 0;
   font-family: "PT Mono", monospace;
   font-size: 16px;
   line-height: 1.13;
   color: #f2f5f7;
 }
 
+.info-communication__link span {
+  vertical-align: top;
+}
+
 .info-communication__icon {
-  margin-right: 15px;
+  margin-right: 6px;
+}
+
+.info-communication__order {
+  margin-top: 5px;
 }
 
 .leading {
@@ -1540,8 +1549,8 @@ html {
 
 .leading__wrapper {
   max-width: 1222px;
-  margin: 0 auto 0 434px;
-  padding: 317px 0 280px;
+  margin: 0 auto;
+  padding: 317px 0 279px 126px;
 }
 
 .leading__heading {
@@ -1578,7 +1587,8 @@ html {
   list-style-type: none;
   display: -ms-grid;
   display: grid;
-  grid-template-columns: repeat(auto-fit, 595px);
+  -ms-grid-columns: (minmax(320px, 595px))[2];
+  grid-template-columns: repeat(2, minmax(320px, 595px));
   -webkit-column-gap: 32px;
   -moz-column-gap: 32px;
   column-gap: 32px;
@@ -1727,7 +1737,8 @@ html {
   list-style-type: none;
   display: -ms-grid;
   display: grid;
-  grid-template-columns: repeat(auto-fit, 350px);
+  -ms-grid-columns: (minmax(230px, 350px))[3];
+  grid-template-columns: repeat(3, minmax(230px, 350px));
   -webkit-column-gap: 85px;
   -moz-column-gap: 85px;
   column-gap: 85px;
@@ -2060,8 +2071,8 @@ html {
 
 .footer__partittion .footer__partittion-button::before {
   position: absolute;
-  right: 2px;
-  top: 9px;
+  right: 26px;
+  top: 27px;
   content: "";
   width: 15px;
   height: 1px;
@@ -2070,8 +2081,8 @@ html {
 
 .footer__partittion .footer__partittion-button::after {
   position: absolute;
-  right: 2px;
-  top: 9px;
+  right: 26px;
+  top: 27px;
   content: "";
   width: 15px;
   height: 1px;
@@ -2083,8 +2094,8 @@ html {
 
 .footer__partittion.is-active .footer__partittion-button::before {
   position: absolute;
-  right: 2px;
-  top: 9px;
+  right: 26px;
+  top: 27px;
   content: "";
   width: 15px;
   height: 1px;
@@ -2099,7 +2110,11 @@ html {
 }
 
 .social__logo-wrap {
-  margin-bottom: 35px;
+  margin-bottom: 28px;
+}
+
+.social__logo {
+  display: inline-block;
 }
 
 .social__network {
@@ -2289,6 +2304,10 @@ html {
   .products__card--lighting {
     background-image: url("../img/products/product-3@2x.jpg");
   }
+
+  .feedback {
+    background-image: url("../img/form-background@2x.png");
+  }
 }
 
 @media (max-width: 1439px) {
@@ -2307,10 +2326,12 @@ html {
   }
 
   .page-header__info {
-    margin-right: 15px;
+    margin-right: -10px;
   }
 
   .info-communication {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
     -webkit-box-pack: end;
     -ms-flex-pack: end;
     justify-content: end;
@@ -2331,6 +2352,7 @@ html {
   }
 
   .info-communication__link {
+    margin: 0;
     padding: 10px 0;
     -webkit-box-pack: end;
     -ms-flex-pack: end;
@@ -2377,10 +2399,6 @@ html {
 
   .advantages__wrapper {
     padding: 80px 22px 60px;
-  }
-
-  .advantages__cards {
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
   }
 
   .advantage-card {
@@ -2525,7 +2543,7 @@ html {
   }
 
   .social {
-    padding-bottom: 30px;
+    padding-bottom: 24px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -2594,6 +2612,10 @@ html {
   .products__card--lighting {
     background-image: url("../img/products/product-3-tablet@2x.jpg");
   }
+
+  .feedback {
+    background-color: #00b3ff;
+  }
 }
 
 @media (max-width: 767px) {
@@ -2646,15 +2668,15 @@ html {
   }
 
   .page-header__info {
-    margin-right: 0;
-  }
-
-  .info-communication {
-    padding-right: 4px;
+    margin-right: -7px;
   }
 
   .info-communication__link {
-    padding: 4px 0 10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    padding: 4px 0;
   }
 
   .leading {
@@ -2697,7 +2719,8 @@ html {
   }
 
   .advantages__cards {
-    grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+    -ms-grid-columns: minmax(270px, 1fr);
+    grid-template-columns: minmax(270px, 1fr);
   }
 
   .advantage-card {
@@ -2758,6 +2781,10 @@ html {
 
   .history__text--not-mobile {
     display: none;
+  }
+
+  .history__accordion.is-active .history__text--not-mobile {
+    display: inline;
   }
 
   .history__button {
@@ -2877,8 +2904,10 @@ html {
   }
 
   .footer__partittion-button {
-    width: 20px;
-    height: 20px;
+    top: 0;
+    left: -24px;
+    width: calc(100% + 48px);
+    height: 100%;
   }
 
   .social {
@@ -2890,7 +2919,7 @@ html {
   }
 
   .social__logo-wrap {
-    margin-bottom: 20px;
+    margin-bottom: 12px;
     padding-left: 0;
   }
 
@@ -3054,7 +3083,7 @@ html {
     outline: 1px solid #000000;
   }
 
-  .social__logo-wrap:hover:not(.focus-visible) {
+  .social__logo:hover:not(.focus-visible) {
     outline: 1px solid #ffffff;
   }
 
@@ -3062,11 +3091,10 @@ html {
     outline: 1px solid #ffffff;
   }
 
-  .site-map__item:hover:not(.focus-visible) {
+  .site-map__item a:hover:not(.focus-visible) {
     outline: 1px solid #ffffff;
   }
 
-  .address__item p:hover:not(.focus-visible),
   .address__item a:hover:not(.focus-visible) {
     outline: 1px solid #ffffff;
   }
@@ -3077,9 +3105,5 @@ html {
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgb(5, 24, 39)), to(rgba(5, 24, 39, 0))), url("../img/header-background@2x.png");
     background-image: -o-linear-gradient(rgb(5, 24, 39), rgba(5, 24, 39, 0)), url("../img/header-background@2x.png");
     background-image: linear-gradient(rgb(5, 24, 39), rgba(5, 24, 39, 0)), url("../img/header-background@2x.png");
-  }
-
-  .feedback {
-    background-image: url("../img/form-background@2x.png");
   }
 }
